# rubiks-cube-project

./: CMakeLists.txt  README.md
include/: computational_representation.hpp  computationalrepresentation.hpp  converter.hpp  cube.hpp  facerotations.hpp  indexer.hpp  lehmercode.hpp  piecesmapping.hpp  pruningtables.hpp  rotation.hpp  serializer.hpp  solver.hpp  utils.hpp
src/: computationalrepresentation.cpp  converter.cpp  cube.cpp  facerotations.cpp  indexer.cpp  lehmercode.cpp  main.cpp  piecesmapping.cpp  pruningtables.cpp  rotation.cpp  serializer.cpp  solver.cpp  utils.cpp
tests/: converter_test.cpp  cube_test.cpp  lehmercode_test.cpp  pruner_test.cpp  rotator_test.cpp  solver_test.cpp
